# python-recurring-ical-events

./: .cleanup-branches.sh  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  SECURITY.md  backports-requirements.txt  dummy.ics  example.py  proc.py  prof.txt  pyproject.toml  recurring_ical_events.py  requirements.txt  rfc5545.html  rfc9074.html  setup.py  test-requirements.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-tag.yml  tests.yml
benchmark/: 01-calendar  01-calendar.txt  02-query  02-query.txt  03-at-20190304.txt  03-first.txt  03-page-20190304.txt  03-page-20200304.txt  CLN007.py  README.md  issue42.py  issue42.txt
docs/: .gitignore  Makefile  changelog.md  conf.py  index.md  requirements.in  requirements.txt  security_policy.md
docs/api/: index.md
docs/community/: index.md  maintenance.rst  media.md
docs/examples/: index.md  index.rst
docs/reference/: api.md  architecture.rst  compatibility.md  dependencies.rst  documentation.md  index.md  related-projects.rst  research.rst
docs/user-guide/: examples.rst  index.md  related-projects.rst
recurring_ical_events/: __init__.py  constants.py  errors.py  examples.py  occurrence.py  pages.py  query.py  repeated_component.py  repetition.py  types.py  util.py
recurring_ical_events/adapters/: __init__.py  alarm.py  component.py  event.py  journal.py  todo.py
recurring_ical_events/selection/: __init__.py  alarm.py  all.py  base.py  name.py
recurring_ical_events/series/: __init__.py  alarm.py  rrule.py
recurring_ical_events/test/: conftest.py  test_all.py  test_bad_rrule_format.py  test_code_quality.sh  test_count.py  test_deleted_entries.py  test_duration.py  test_end_before_start_event.py  test_example_function.py  test_examples.py  test_extend_classes.py  test_issue_107_omitting_last_event.py  test_issue_113_period_in_rdate.py  test_issue_128_only_first_event.py  test_issue_132_swapped_start_and_end.py  test_issue_148_ignored_exdate_in_higher_sequence.py  test_issue_163_deleted_modification.py  test_issue_164_duplicated_event.py  test_issue_173_only_modification_included.py  test_issue_186_alarms.py  test_issue_186_icalendar_alarm_interface.py  test_issue_18_cancel_status.py  test_issue_201_incompatible_dates.py  test_issue_20_exdate_ignored.py  test_issue_211_pagination.py  test_issue_217_expose_occurrences_api.py  test_issue_219_recurrence_id_in_events.py  test_issue_223_sequence_number.py  test_issue_243_recurrence_id_is_not_identical_to_dtstart.py  test_issue_253_additional_recurrence_id.py  test_issue_27.py  test_issue_28_timezone_with_z.py  test_issue_36_recurrence_ID_format.py  test_issue_36_recurrence_id_format.py  test_issue_4.py  test_issue_44_day_event_reported_twice.py  test_issue_48_daylight.py  test_issue_48_dst.py  test_issue_62_moved_event.py  test_issue_6_copy_subcomponents.py  (+22 more)
recurring_ical_events/test/calendars/: Germany_Holidays.ics  alarm_1_week_before_event.ics  alarm_absolute_edited.ics  alarm_absolute_repeat.ics  alarm_around_event_boundaries.ics  alarm_several_in_one.ics  alarms_different_in_same_event.ics  date_exclude.txt  duration_edited.ics  each_week_but_one_deleted.ics  (+35 more)
test/: conftest.py  py.py  test_after.py  test_all.py  test_at_function.py  test_bad_rrule_format.py  test_code_quality.sh  test_convert_inputs.py  test_count.py  test_daylight_saving_time.py  test_deleted_entries.py  test_duration.py  test_end_before_start_event.py  test_event_values_and_edits.py  test_examples.py  test_extend_classes.py  test_germany.py  test_issue_101_select_components.py  test_issue_107_omitting_last_event.py  test_issue_113_period_in_rdate.py  test_issue_117_until_before_dtstart.py  test_issue_128_only_first_event.py  test_issue_139_no_duration.py  test_issue_148_ignored_exdate_in_higher_sequence.py  test_issue_15.py  test_issue_151_macos_linux_difference.py  test_issue_164_duplicated_event.py  test_issue_173_only_modification_included.py  test_issue_179_span_in_event.py  test_issue_186_alarms.py  test_issue_186_icalendar_alarm_interface.py  test_issue_18_cancel_status.py  test_issue_20_exdate_ignored.py  test_issue_27.py  test_issue_28_timezone_with_z.py  test_issue_4.py  test_issue_44_day_event_reported_twice.py  test_issue_48_daylight.py  test_issue_48_dst.py  test_issue_61.py  (+28 more)
test/calendars/: Germany.ics  after_many_events_in_order.ics  alarm_15_min_before_event_snoozed.ics  alarm_absolute.ics  alarm_at_start_of_event.ics  alarm_of_repeated_event.ics  alarm_recurring_and_acknowledged_at_2024_11_27_16_27.ics  alarm_removed_and_moved.ics  alarms_at_the_same_time.ics  bad_rrule_missing_until_event.ics  daylight-saving-time.ics  discourse-no-dtend.ics  duplicated_rrule.ics  duration.ics  each_week_but_two_deleted.ics  end_before_start_event.ics  fablab-cottbus.ics  issue-128-only-first-event.ics  issue-15-duplicated-events.ics  issue-151-macos-linux-difference.ics  issue-20-exdate-ignored.ics  issue-27-t1.ics  issue-27-t2.ics  issue-28-rrule-with-UTC-endinginZ.ics  issue-36-recurrence-ID-format.ics  issue-4.ics  issue-61-time-zone-error.ics  issue-97-simple-journal.ics  issue-97-simple-todo.ics  issue_107_omitting_last_event.ics  issue_113_period_rdate_duration.ics  issue_148_edge_case_2.ics  issue_163_deleted_modification.ics  issue_164_duplicated_event.ics  issue_186_invalid_trigger.ics  issue_27_t2.ics  issue_48_daylight_aware_repeats.ics  issue_48_dst.ics  issue_4_weidenrinde.ics  issue_75_range_parameter.ics  (+9 more)
